Fix spacing on portfolio items

--- a/stocksearch/src/app/portfolio-item/portfolio-item.component.css
+++ b/stocksearch/src/app/portfolio-item/portfolio-item.component.css
@@ -24,6 +24,10 @@
     justify-content: flex-end;
 }
 
+.change-stats {
+    font-weight: bold;
+}
+
 .flex-container {
     display: flex;
     flex-wrap: wrap;
@@ -36,6 +40,16 @@
 }
 
 @media screen and (max-width: 600px) {
+
+    .change-stats {
+        font-weight: lighter;
+    }
+
+    .flex-container {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
     .flex-child {
         flex: none;
         width: 100%;
